<resources>
    <string name="app_name">Name That Song</string>
    <string name="play">Play</string>
    <string name="play_again">Play again?</string>
    <string name="add_song">Add Song</string>
    <string name="lyric">Lyric</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="game_complete">Game Complete!</string>
    <string name="next">Next</string>
    <string name="x">x</string>
    <string name="turnChange">To change the number of turns, press Play and then click on the turn counter in the bottom left hand corner. Please note, this will not take effect until the next go.</string>
    <string name="addSong">To add your own lyrics, press the + button in the top left had corner. Note that this will only add the song for the current game.</string>
    <string name="timeChange">To change the length of the timer, press Play and then click on the timer in the bottom right hand corner. Input value in seconds. Please note, this will not take effect until the next go.</string>
    <string name="how_to">How To</string>
    <string name="amount_of_turns">Amount of turns</string>
    <string name="set_timer">Set timer</string>
    <string name="songs">Songs</string>
    <string name="_50_s">50\'s</string>
    <string name="_60_s">60\'s</string>
    <string name="_70_s">70\'s</string>
    <string name="_80_s">80\'s</string>
    <string name="_90_s">90\'s</string>
    <string name="_00_s">00\'s</string>
    <string name="_10_s">10\'s</string>
    <string name="home">Home</string>
    <string name="submit">Submit</string>
    <string name="show">Show</string>
    <string name="play_2">Play 2</string>
</resources>
