<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecadeSelect">

    <Button
        android:id="@+id/submitDecade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="submitDecade"
        android:text="@string/submit"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenButton" />

    <Button
        android:id="@+id/tenButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addTens"
        android:text="@string/_10_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyButton" />

    <Button
        android:id="@+id/twentyButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addNoughties"
        android:text="@string/_00_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nineButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addEighties"
        android:text="@string/_80_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:onClick="addNineties"
        android:text="@string/_90_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/twentyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

    <Button
        android:id="@+id/sevenButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:onClick="addSeventies"
        android:text="@string/_70_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addSixties"
        android:text="@string/_60_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fiveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:onClick="addFifties"
        android:text="@string/_50_s"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>